Mon Feb 15 06:49:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Fixed fixes with latest releases of tools

Sun Feb 14 19:46:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
        * m4/ace.m4:
          Integrated patches from below, created by Pau Garcia i Quiles
          <pgquiles at elpauer dot org>

        * debianbuild/patches/19-gcc43.dpatch:
          Removed, not needed anymore

        * debianbuild/patches/94-build-crosscompile.dpatch:
        * debianbuild/patches/96-build-athena3d.dpatch:
          Removed, integrated into trunk

Sun Feb 14 07:22:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Imported last version from Pau Garcia i Quiles

Sat Feb 13 15:59:26 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * ace/Unbounded_Set_Ex.h:

          Added STL iterator type traits support to the ACE_Unbounded_Set*
          and its corresponding iterators.

Fri Feb 12 19:19:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Containers_T.h:
          Doxygen changes

Fri Feb 12 17:39:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          2610 is working now

Fri Feb 12 14:05:21 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Fix unused variable warning.

Fri Feb 12 10:36:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Expanded autodetected support for GCC builtin __sync_XXX
          atomic op functions to the IA64 platform

Thu Feb 11 22:23:08 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * THANKS:

          Added Trent Nadeau <Trent dot Nadeau at ngc dot com> to the
          hall of fame.

Thu Feb 11 20:29:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:
